# ska-low-cbf-p4

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .release  CODEOWNERS  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
docs/: requirements.txt
docs/src/: ARP.rst  Overview.rst  PSR.rst  SDP.rst  SPS.rst  conf.py  index.rst  routing.rst
docs/src/_static/js/: gitlab.js
docs/src/_templates/: layout.html
p4-ansible/: inventory  p4_initialise.yml  p4_setup.yml
p4-ansible/files/dpkg-reconfigure/: tzdata.sh
p4-ansible/files/sde/: apsn.yaml  ska.yaml
p4-ansible/roles/sde/files/: run_switchd_background.sh  ska-p4-env  switchd.service  switchd_wrapper.sh
p4-ansible/roles/sde/tasks/: main.yml
p4-code/aa05/: build-tna-2.sh  build.sh  const.p4  headers.p4  low_cbf.p4  parde.p4  types.p4  util.p4
